--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "lint": "eslint .",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "cp build/index.html build/404.html && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -60,7 +62,9 @@
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "gh-pages": "^4.0.0",
     "husky": "^8.0.2",
     "prettier": "^2.7.1"
-  }
+  },
+  "homepage": "https://sycho09.github.io/wanted-pre-onboarding-3-1/"
 }
